--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -60,7 +60,7 @@
 
 <header>
     <h1>Privacy Policy</h1>
-    <p>Jame Infotech</p>
+    <p>Daily Apps Mania -> Video Downlaoder</p>
     <p>Last Updated: December 2025</p>
 </header>
 
@@ -69,7 +69,7 @@
     <section>
         <h2>Introduction</h2>
         <p>
-            Jame Infotech ("we", "our", or "us") respects your privacy and is committed to protecting it.
+            Daily Apps Mania ("we", "our", or "us") respects your privacy and is committed to protecting it.
             This Privacy Policy explains how our mobile applications and services handle user data.
         </p>
         <p>
@@ -118,9 +118,9 @@
         </p>
 
         <ul>
-            <li>Google Play Services</li>
-            <li>Google Analytics for Firebase (aggregated usage data only)</li>
-            <li>Firebase Crashlytics (crash diagnostics)</li>
+            <li><a href="https://policies.google.com/privacy">Google Play Services</a></li>
+            <li><a href="https://www.google.com/analytics/terms/">Google Analytics for Firebase (aggregated usage data only)</a></li>
+            <li><a href="https://firebase.google.com/support/privacy">Firebase Crashlytics (crash diagnostics)</a></li>
         </ul>
 
         <p>
@@ -144,8 +144,8 @@
     <section>
         <h2>Cookies</h2>
         <p>
-            Our mobile applications do not use cookies directly.
-            However, third-party SDKs integrated within the app may use
+            Our apps may use local cookies to support functionality. This data is stored only on the device and never transmitted.
+            Also, third-party SDKs integrated within the app may use
             cookies or similar technologies as part of their services.
         </p>
     </section>
@@ -153,13 +153,34 @@
     <section>
         <h2>Children’s Privacy</h2>
         <p>
-            Our services are not directed at children under the age of 13.
+            Our services are not directed at children under the age of 18.
             We do not knowingly collect personal data from children.
         </p>
         <p>
-            If you believe a child has provided personal information,
+            We do not request or ask for any information. Still, if you believe a child has provided personal information,
             please contact us so we can take appropriate action.
         </p>
+    </section>
+	
+	<section>
+        <h2>Acceptable Use & Copyright Disclaimer (Acceptable Use & Copyright Disclaimer)</h2>
+        <p>
+			This application is intended for personal and lawful use only.
+			Users are responsible for ensuring that they have the necessary
+			rights or permissions from the content owner before downloading,
+			saving, sharing, or reposting any media.
+		</p>
+		<p>
+			Downloading, copying, distributing, or otherwise using copyrighted
+			material without authorization from the copyright holder may violate
+			applicable copyright laws and is strictly prohibited.
+		</p>
+		<p>
+			Users assume full responsibility for any misuse of the application
+			and for complying with all applicable laws in their jurisdiction.
+			The developers of this application do not promote, support, or
+			endorse copyright infringement or unauthorized use of protected content.
+		</p>
     </section>
 
     <section>
@@ -193,7 +214,7 @@
             please contact us:
         </p>
         <p>
-            <strong>Email:</strong> jameinfotech@gmail.com
+            <strong>Email:</strong> dailyappsmania@gmail.com
         </p>
     </section>
 
