Name change which was pening

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Privacy Policy | Jame Infotech</title>
+<title>Privacy Policy | Video Downloader</title>
 
 <style>
     body {
@@ -221,7 +221,7 @@
 </div>
 
 <footer>
-    © 2025 Jame Infotech. All rights reserved.
+    © 2026 Daily Apps Mania. All rights reserved.
 </footer>
 
 </body>
